--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,8 +14,10 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <TextBlock x:Name="totalChargeTextBox"  HorizontalAlignment="Left" Margin="199,222,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="106" Height="24"/>
+        <TextBlock x:Name="totalChargeTextBlock" Text="Charge + $25" HorizontalAlignment="Left" Margin="199,222,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" Height="24"/>
         <Label Content="Total Charge after adding &#xA;the delivery charge ($25):" HorizontalAlignment="Left" Margin="31,214,0,0" VerticalAlignment="Top" Width="154" Height="44"/>
+        <Label Content="Total Charge after adding &#xA;the wrap charge($5):" HorizontalAlignment="Left" Margin="31,258,0,0" VerticalAlignment="Top" Width="154" Height="44"/>
+        <TextBlock x:Name="totalChargeafterwrapTextBlock" Text="Charge + $5" HorizontalAlignment="Left" Margin="199,267,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" Height="24"/>
 
 
     </Grid>
